<resources>
    <string name="app_name">Atenea</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="client_id" translatable="false">243010325269-r6bcaulkam1ae6bjhau8l4tmv4g3g4tr.apps.googleusercontent.com</string>
    <string name="title_detail">¡Esta es la informacion de tu materia!</string>
    <string name="info_materia">Info Materia</string>
    <string name="materia_detail">Materia</string>
    <string name="docente_detail">Docente</string>
    <string name="codigo_detail">Codigo</string>
    <string name="secci_n_a1">Sección: A1</string>
    <string name="participantes_detail">Participantes</string>
    <string name="hora_inicio_8_00_am">Hora Inicio: 8:00 AM</string>
    <string name="hora_salida_10_00_am">Hora Salida: 10:00 AM</string>
    <string name="delete_button">Borrar</string>
    <string name="button_back" translatable="false">button_back</string>
    <string name="class_image" translatable="false">class_image</string>
    <string name="info_list_detail2">Info Lista</string>
    <string name="this_is_your_list_information_detail2">¡Esta es la información de tu lista!</string>
    <string name="universidad_detail2" translatable="false">Universidad</string>
    <string name="nombre_lista_detail2" translatable="false">Nombre Lista</string>
    <string name="delete_detail2">Borrar</string>
    <string name="image_list_detail2" translatable="false">image_list</string>
    <string name="faqs" translatable="false">FAQs</string>
    <string name="pregunta1">¿Qué es Atenea y para qué sirve?</string>
    <string name="repuesta1">Atenea es una aplicación diseñada para gestionar la asistencia en instituciones educativas de manera eficiente y segura, utilizando tecnología QR.</string>
    <string name="pregunta2">¿Qué hago si mi dispositivo no puede escanear el código QR?</string>
    <string name="respuesta2">Revisa los permisos de tu cámara en la configuración del dispositivo. Si el problema persiste, consulta con tu profesor o administrador para registrar la asistencia de forma manual.</string>
    <string name="pregunta3">¿Puedo usar ATENEA sin conexión a Internet?</string>
    <string name="respuesta3">No, la aplicación requiere conexión a Internet para validar los escaneos y sincronizar los datos con la base central.</string>
    <string name="pregunta4">¿Qué dispositivos son compatibles con ATENEA?</string>
    <string name="respuesta4">La aplicación es compatible con dispositivos Android que tengan la versión 7.0 (Nougat) o superior.</string>
    <string name="pregunta5">¿Qué permisos necesita la aplicación?</string>
    <string name="repuesta5_1">ATENEA requiere permisos para:</string>
    <string name="repuesta5_2">-Acceso a Internet, para la conexión a la base de datos central.</string>
    <string name="repuesta5_3">-Uso de la cámara para escanear los códigos QR.</string>
    <string name="pregunta6">¿Cómo se asegura la privacidad de mis datos?</string>
    <string name="respuesta6">Los datos se almacenan en servidores seguros utilizando servicios de Firebase, que cuentan con medidas avanzadas de protección.</string>
    <string name="pregunta7">¿Puedo usar Atenea en varios dispositivos?</string>
    <string name="respuesta7">Sí, siempre y cuando inicies sesión con tu cuenta en cada dispositivo.</string>
    <string name="pregunta9">¿Cómo inicio sesión en ATENEA?</string>
    <string name="respuesta8">Para iniciar sesión, debes utilizar las credenciales proporcionadas por la institución. Si no tienes una cuenta, puedes registrarte con tu correo electrónico y una contraseña segura.</string>
    <string name="pregunta10">¿Cómo Obtengo mi codigo QR?</string>
    <string name="respuesta10">El codigo QR debe ser brindando por cada institucion en tu carnet, si por alguna razon falla por favor contacta con tu profesor o administrador de la comunidad educativa encargada del area.</string>
    <string name="ateneablack" translatable="false">logoatenea</string>
    <string name="button_flotante_scan_qr" translatable="false">button flotante</string>
    <string name="logo_play_negro" translatable="false">Logo</string>
    <string name="welcome_back">Bienvenido de nuevo</string>
    <string name="sign_in_to">Inicie sesión para acceder a su cuenta</string>
    <string name="placeholder_email">Introduzca su email</string>
    <string name="placeholder_password">Contraseña</string>
    <string name="remember_me">Recuerdame</string>
    <string name="forget_password">Olvidaste tu contraseña?</string>
    <string name="continue_with_google">Continuar con Google</string>
    <string name="next_button_login">Continuar</string>
    <string name="new_member_login">¿Es nuevo? Regístrese ahora</string>
    <string name="about_us_title">Sobre Nosotros</string>
    <string name="atenewhite" translatable="false">Atenea Logo</string>
    <string name="atendance_title_about" translatable="false">Atendance</string>
    <string name="foredu_title_about" translatable="false">For Edu Activities</string>
    <string name="primerparafo">En Atenea, nuestra misión es revolucionar la gestión de la asistencia en las instituciones educativas mediante el uso de tecnología innovadora.</string>
    <string name="segundoparrafo">Estamos comprometidos con ofrecer una solución eficiente y segura para las instituciones educativas, con la visión de expandirnos y adaptar nuestra tecnología a más centros en el futuro.</string>
    <string name="tercerparrafo">Atenea fue creada por un grupo de tres estudiantes apasionados por la tecnología y la innovación en el ámbito educativo.</string>
    <string name="asp" translatable="false">Imagen 1</string>
    <string name="larahel" translatable="false">Imagen 2</string>
    <string name="harmoni" translatable="false">Imagen 3</string>
    <string name="quintoparrafo">Como grupo de desarrolladores, hemos tenido la oportunidad de trabajar en varios proyectos emocionantes y desafiantes, tanto en el ámbito académico como en el profesional.</string>
    <string name="derechos_reservados">© 2024 Atenea. Todos los derechos reservados.</string>
    <string name="settings_title">Ajustes</string>
    <string name="name_example" translatable="false">Poul Moahdib</string>
    <string name="correo_ejemplo" translatable="false">poulmodb@gmail.com</string>
    <string name="lenguage_settings">Lenguaje</string>
    <string name="about_us_settings">Sobre Nosotros</string>
    <string name="faqs_settings" translatable="false">FAQs</string>
    <string name="help">Instrucciones de uso</string>
    <string name="next_butt">Continuar</string>
    <string name="log_out_settings">Cerrar sesión</string>
    <string name="lenguajeicon" translatable="false">lenguaje</string>
    <string name="helpicon" translatable="false">helpicon</string>
    <string name="faqsicon" translatable="false">faqsicon</string>
    <string name="exiticon" translatable="false">exiticon</string>
    <string name="abouticon" translatable="false">abouticon</string>
    <string name="get_started_register">Comenzemos</string>
    <string name="free_account_register">creando una cuenta gratuita.</string>
    <string name="valid_email_register">Email</string>
    <string name="strong_password_register">Contraseña fuerte</string>
    <string name="terms_and_conditions_register">Al marcar la casilla, acepta nuestras Condiciones generales.</string>
    <string name="next_register">Continuar</string>
    <string name="already_a_member_log_in_register">¿Ya estas registrado? Aqui</string>
    <string name="splascreen" translatable="false">splascreen</string>
    <string name="create_subject_title_add">Crear Materia</string>
    <string name="professor_add">Docente</string>
    <string name="subject_code_add">Codigo Materia</string>
    <string name="subject_name_add">Nombre Materia</string>
    <string name="students_add">Estudiantes</string>
    <string name="section_add">Sección</string>
    <string name="start_add">Inicio</string>
    <string name="end_add">Fin</string>
    <string name="save_button">Guardar</string>
    <string name="view_subjects_add">Ver Materias</string>
    <string name="list_of_subjects_add">Lista de Materias</string>
    <string name="create_subject_add">Crear Materia</string>
    <string name="buscar_button">Buscar...</string>
    <string name="hi_homefragment">HEY,</string>
    <string name="name__homefragment" translatable="false">POUL</string>
    <string name="welcome_back_have_a_pleasure_day">¡Bienvenido que tengas un buen día!</string>
    <string name="activity__homefragment">Actividad</string>
    <string name="create_list_tittle">Crear Lista</string>
    <string name="seleccione_la_materia_list">Seleccione la Materia</string>
    <string name="view_lists_button">Ver Listas</string>
    <string name="list_of_subjects_list">Lista Asistencia</string>
    <string name="create_list_2view">Crear Lista</string>
    <string name="iconlists" translatable="false">iconlists</string>
    <string name="list_ready_to_export_tittle">Listas para exportar</string>
    <string name="scann_activity_title">¡Escanea!</string>
    <string name="icono_de_c_mara" translatable="false">Icono de cámara</string>
    <string name="iconmenos" translatable="false">iconmenos</string>
    <string name="carneticon" translatable="false">carneticon</string>
    <string name="cancelbutton" translatable="false">cancelbutton</string>
    <string name="como_funciona_la_app">Como funciona la app?</string>
    <string name="_1_primer_paso">1. Primer Paso</string>
    <string name="pesta_a_a_adir_tarea">A travez del menu inferior dirígete a la pestaña añadir tarea.</string>
    <string name="image_for_step_1" translatable="false">Image for step 1</string>
    <string name="util_adelante_para_validaciones">Luego rellena los campos, que te solicitan para crear una materia, estos datos seran mas util adelante para validaciones.</string>
    <string name="_2_segundo_paso">2. Segundo Paso</string>
    <string name="dir_gete_a_la_pesta_a_lista">Ahora a travez del menu inferior dirígete a la pestaña lista.</string>
    <string name="materias_creadas_anteriormente">Selecciona los campos, que se solicitan para crear una lista, en el primero deberas escoger la universidad en la que impartes la materia y en el segundo se muestran tus materias creadas anteriormente.</string>
    <string name="_3_tercer_paso">3. Tercer Paso</string>
    <string name="todo_esta_bien">En ambas pestañas, bajo el boton de guardar esta otro boton este nos sirve para verificar las listas creadas o materias creadas y corroborar que todo esta bien.</string>
    <string name="_4_cuarto_paso">4. Cuarto Paso</string>
    <string name="boton_flotante_que_se_encuentra_en_medio_de_la_pantalla">Ahora a travez del menu inferior dirígete al boton flotante que se encuentra en medio de la pantalla</string>
    <string name="capturar_la_asistencia">Para registrar la asistencia presiona sobre el icono blanco de la camara, esto abrira tu camara y te permitira capturar la asistencia.</string>
    <string name="una_vez_que_abra_almacenar_la_asistencia">Una vez que abras tu camara acerca a la camara el codigo QR, posteriormente te saldra un cuadro de dialogo solicitando que selecciones la lista donde quieres almacenar la asistencia.</string>
    <string name="de_1_hora">¡Nota! Existen varias validaciones sobre capturar la asistencia, primero no se puede registrar la misma asistencia en la misma lista, en un plazo de 1 hora.</string>
    <string name="presente">Segunda validacion: la lista sumara 1 cada vez que el estudiante este presente</string>
    <string name="_5_ultimo_paso">5. Ultimo Paso</string>
    <string name="_boton_descargar">Utilizando el menu inferior clic en la pestaña reportes, aqui veras que se despliega la lista de asistencias creadas una vez scaneado algun codigo QR dentro de la lista podras descargarla presionanando el boton descargar.</string>
</resources>