<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FCF5FD"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".login">


    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/logo_play_negro"
        android:src="@drawable/ateneablack" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/welcome_back"
        android:textSize="24sp"
        android:textStyle="normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/sign_in_to"
        android:textColor="#D37A7575"
        android:textSize="14sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />


    <EditText
        android:id="@+id/emailInput"
        android:layout_width="286dp"
        android:layout_height="57dp"
        android:layout_marginBottom="8dp"
        android:background="#1DB3ADAD"
        android:backgroundTint="@android:color/darker_gray"
        android:drawableEnd="@drawable/baseline_alternate_email_24"
        android:hint="@string/placeholder_email"
        android:paddingEnd="10dp"
        android:inputType="textEmailAddress"
        android:paddingStart="7dp" />


    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="286dp"
        android:layout_height="57dp"
        android:layout_marginBottom="8dp"
        android:background="#1DB3ADAD"
        android:backgroundTint="@android:color/darker_gray"
        android:drawableEnd="@drawable/baseline_lock_outline_24"

        android:hint="@string/placeholder_password"
        android:paddingEnd="10dp"
        android:inputType="textPassword"
        android:paddingStart="7dp" />


    <LinearLayout
        android:layout_width="306dp"
        android:layout_height="61dp"
        android:layout_gravity="center|center_vertical"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/rememberMeCheck"
            android:layout_width="184dp"
            android:layout_height="38dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#BEBEBE"
            android:text="@string/remember_me"
            android:textColor="#B3ACB0"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:foregroundGravity="left"
            android:gravity="left"
            android:text="@string/forget_password"
            android:textColor="#6BA478"
            android:textSize="12sp" />

    </LinearLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="11dp" />

    <TextView
        android:id="@+id/googleSignInButton"
        android:layout_width="307dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/mapq"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        android:text="@string/continue_with_google"
        android:textColor="@color/black"
        android:textSize="16sp" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="313dp"
        android:layout_height="62dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#6CA579"
        android:text="@string/next_button_login"
        android:textColor="@color/white"
        app:strokeColor="#000000" />


    <TextView
        android:id="@+id/registerLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/new_member_login"
        android:textColor="@color/black" />


</LinearLayout>
