<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Verdemenuprimary"
    tools:context=".menu_help">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
                    android:contentDescription="@string/image_for_step_1"
            android:src="@drawable/back_btn"
            android:padding="14dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/como_funciona_la_app"
            android:layout_centerInParent="true"
            android:textColor="#FFFFFF"
            android:textStyle="bold"

            android:textSize="18sp" />
    </RelativeLayout>

    <!-- Contenido de la guía -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Paso 1-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="8dp"
                android:text="@string/_1_primer_paso"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/pesta_a_a_adir_tarea"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="576dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/image_for_step_1"
                android:scaleType="centerCrop"
                android:src="@drawable/firstep" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/util_adelante_para_validaciones"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <!-- Paso 1 -->

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="576dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/image_for_step_1"
                android:scaleType="centerCrop"
                android:src="@drawable/firstep1_1" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="576dp"
                android:layout_marginBottom="16dp"
                 android:contentDescription="@string/image_for_step_1"
                android:scaleType="centerCrop"
                android:src="@drawable/firstsetp1_3" />
            <!-- Paso 2 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="8dp"
                android:text="@string/_2_segundo_paso"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />



            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/dir_gete_a_la_pesta_a_lista"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="576dp"
                android:layout_marginBottom="16dp"
                 android:contentDescription="@string/image_for_step_1"
                android:scaleType="centerCrop"
                android:src="@drawable/secondstep" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/materias_creadas_anteriormente"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <!-- Paso 2 -->

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="576dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/image_for_step_1"
                android:scaleType="centerCrop"
                android:src="@drawable/secondstep1_1" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="576dp"
                android:layout_marginBottom="16dp"
               android:contentDescription="@string/image_for_step_1"
                android:scaleType="centerCrop"
                android:src="@drawable/secondstep2" />

            <!-- Paso 2 -->


            <!-- Paso 2 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="8dp"
                android:text="@string/_3_tercer_paso"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />



            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/todo_esta_bien"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="576dp"
                android:layout_marginBottom="16dp"
                 android:contentDescription="@string/image_for_step_1"
                android:scaleType="centerCrop"
                android:src="@drawable/terceruno" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="576dp"
                android:layout_marginBottom="16dp"
                       android:contentDescription="@string/image_for_step_1"
                android:scaleType="centerCrop"
                android:src="@drawable/tece" />


            <!-- Paso 4 -->

            <!-- Paso 4 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="8dp"
                android:text="@string/_4_cuarto_paso"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />



            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/boton_flotante_que_se_encuentra_en_medio_de_la_pantalla"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="576dp"
                android:layout_marginBottom="16dp"
          android:contentDescription="@string/image_for_step_1"
                android:scaleType="centerCrop"
                android:src="@drawable/cuartostep1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/capturar_la_asistencia"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <!-- Paso 4 -->

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="576dp"
                android:layout_marginBottom="16dp"
                 android:contentDescription="@string/image_for_step_1"
                android:scaleType="centerCrop"
                android:src="@drawable/cuartopaso" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/una_vez_que_abra_almacenar_la_asistencia"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <!-- Paso 5 -->

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="576dp"
                android:layout_marginBottom="16dp"

    android:contentDescription="@string/image_for_step_1"
                android:scaleType="centerCrop"
                android:src="@drawable/cuartopaso" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/de_1_hora"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/presente"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <!-- Paso 5 -->

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="576dp"
                android:layout_marginBottom="16dp"
                        android:contentDescription="@string/image_for_step_1"
                android:scaleType="centerCrop"
                android:src="@drawable/cuarto3" />


            <!-- Paso 5 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="8dp"
                android:text="@string/_5_ultimo_paso"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />



            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/_boton_descargar"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="576dp"
                android:layout_marginBottom="16dp"
                    android:contentDescription="@string/image_for_step_1"
                android:scaleType="centerCrop"
                android:src="@drawable/quinto1" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="576dp"
                android:layout_marginBottom="16dp"
                  android:contentDescription="@string/image_for_step_1"
                android:scaleType="centerCrop"
                android:src="@drawable/quinto2" />


            <!-- Paso 5 -->






        </LinearLayout>
    </ScrollView>

</LinearLayout>