<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="bold"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bkg"
    android:orientation="vertical"

    android:padding="16dp"
    tools:context=".HomeFragment">


    <ImageView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:contentDescription="@string/iconmenos"
        android:scaleType="centerCrop"
        android:src="@drawable/round_remove_24"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">


        <ImageView

            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/cancelbutton"
            android:src="@drawable/baseline_clear_24" />


    </LinearLayout>


    <ImageView
        android:layout_width="115dp"
        android:layout_height="95dp"
        android:layout_gravity="center|top"

        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/carneticon"
        android:src="@drawable/carnet" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:padding="8dp"
            android:text="@string/scann_activity_title"
            android:textColor="@color/black"
            android:textSize="25sp" />


    </LinearLayout>

    <!-- Contenedor para la cámara -->
    <FrameLayout
        android:layout_width="248dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:background="@android:color/darker_gray"

        >


        <!-- Icono de cámara en el centro -->
        <ImageView
            android:id="@+id/camera_icon"
            android:layout_width="94dp"
            android:layout_height="90dp"
            android:layout_gravity="center"

            android:contentDescription="@string/icono_de_c_mara"
            android:scaleType="fitXY"

            android:src="@drawable/outline_camera_alt_24" />
    </FrameLayout>


    <!-- Botones de confirmación y cancelación -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_marginTop="24dp"
        android:gravity="center"

        android:orientation="horizontal"/>


</LinearLayout>